Fixed about_me link dynamic font size/spacing

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -81,7 +81,7 @@
 
   color: white;
   fill: white;
-  font-size: clamp(18px, 1.5rem, 2vw);
+  font-size: clamp(15px, 1.5rem, 2vw);
   font-weight: 200;
   text-decoration: none;
 }
