--- a/src/styles/Terminal.css
+++ b/src/styles/Terminal.css
@@ -80,7 +80,7 @@
   line-height: 2.2rem;
 }
 .command-line-hero {
-  top: 39vh !important;
+  top: calc(44vh - 3rem) !important;
   padding-left: calc(clamp(0px, 5rem, 5vw) - 0.5rem);
 }
 @media screen and (min-width: 768px) {
